  * QDate stores the Julian Day as a qint64 extending date support across a
    more interesting range, see the class documentation for details.
    * Conversion to YMD form dates is only accurate between to 4800 BCE to
      1.4 million CE
    * The QDate::addDays() and QDateTime::addDays() methods now take a qint64
    * The QDate::daysTo() and QDateTime::daysTo() methods now return a qint64


* QIntValidator and QDoubleValidator no longer fall back to using the C locale if
  the requested locale fails to validate the input.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

QtWidgets
---------
* QInputContext removed as well as related getters and setters on QWidget and QApplication.
  Input contexts are now platform specific.

* QInputDialog::getInteger() has been obsoleted. Use QInputDialog::getInt() instead.

* In Qt 4, many QStyleOption subclasses were introduced in order to keep
  binary compatibility -- QStyleOption was designed to be extended this way,
  in fact it embeds a version number. In Qt 5 the various QStyleOption*V{2,3,4}
  classes have been removed, and their members merged into the respective
  base classes. Those classes were left as typedefs to keep existing code
  working. Still, some minor adjustements could be necessary, especially in code
  that uses QStyleOption directly and does not initialize all the members using
  the proper Qt API: due to the version bump, QStyle will try to use the additional
  QStyleOption members, which are left default-initialized.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is