@@ -1,6 +1,4 @@
-DECL|function|codecForCStrings
 DECL|function|codecForTr
-DECL|function|setCodecForCStrings
 DECL|function|setCodecForTr
 DECL|macro|QTEXTCODEC_H
 DECL|variable|QIODevice
